kubernetes/applications/zabbix/zabbix-server-pgsql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server-pgsql
  namespace: zabbix
  labels:
    app: zabbix-server-pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-pgsql
  template:
    metadata:
      labels:
        app: zabbix-server-pgsql
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      tolerations:
        - key: node.kubernetes.io/disk-pressure
          operator: Exists
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
          effect: NoSchedule
      containers:
        - name: zabbix-server-pgsql
          image: zabbix/zabbix-server-pgsql:alpine-trunk
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: trapper
              containerPort: 10051
              protocol: TCP
          volumeMounts:
            - name: snmptraps
              mountPath: /var/lib/zabbix/snmptraps
            - name: mibs
              mountPath: /usr/share/snmp/mibs
            - name: export
              mountPath: /var/lib/zabbix/export
          resources:
            requests:
              cpu:              "250m"
              memory:           "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu:              "500m"
              memory:           "1Gi"
              ephemeral-storage: "2Gi"
      volumes:
        - name: snmptraps
          persistentVolumeClaim:
            claimName: zabbix-snmptraps-data
        - name: mibs
          persistentVolumeClaim:
            claimName: zabbix-snmptraps-mibs
        - name: export
          persistentVolumeClaim:
            claimName: zabbix-server-export
