kubernetes/applications/zabbix/zabbix-server-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server-web
  namespace: zabbix
  labels:
    app: zabbix-server-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-web
  template:
    metadata:
      labels:
        app: zabbix-server-web
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      tolerations:
        - key: node.kubernetes.io/disk-pressure
          operator: Exists
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
          effect: NoSchedule
      containers:
        - name: zabbix-server-web
          image: zabbix/zabbix-web-nginx-pgsql:alpine-trunk
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: ssl
              mountPath: /etc/ssl/nginx
          resources:
            requests:
              cpu:              "100m"
              memory:           "256Mi"
              ephemeral-storage: "500Mi"
            limits:
              cpu:              "250m"
              memory:           "512Mi"
              ephemeral-storage: "1Gi"
      volumes:
        - name: ssl
          persistentVolumeClaim:
            claimName: zabbix-web-ssl
