kubernetes/applications/zabbix/zabbix-db-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-db-headless
  namespace: zabbix
  labels:
    app: zabbix-db
spec:
  clusterIP: None
  selector:
    app: zabbix-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
