kubernetes/applications/zabbix/zabbix-server-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-web
  namespace: zabbix
  labels:
    app: zabbix-server-web
spec:
  type: ClusterIP
  selector:
    app: zabbix-server-web
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
